Set up javascript template

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,25 @@ services:
     logging: *default-logging
 
   # Your extra services here
+  rating-service:
+    image: semtech/mu-javascript-template
+    environment:
+      NODE_ENV: "development"
+    ports:
+      - 8888:80
+    volumes:
+      - ./config/rating-service:/app/
+
+  #rating-service:
+  #  image: semtech/mu-javascript-template
+  #  volumes:
+  #    - ./config/rating-service:/app
+  #  environment:
+  #    MU_APPLICATION_GRAPH: "http://mu.semte.ch/graphs/public"
+  #    NODE_ENV: "development"
+  #  depends_on:
+  #    - resource
+
   resource:
     image: semtech/mu-cl-resources:1.26.0
     volumes:
