added registration service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,16 @@ services:
     logging: *default-logging
 
   # Your extra services here
+  login:
+    image: semtech/mu-login-service:3.0.0
+    links:
+      - database:database
+
+  registration:
+    image: semtech/mu-registration-service:2.8.0
+    links:
+      - database:database
+
   rating-service:
     image: books-rating-service:0.1.0
   
