Configured login and registration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,11 +26,17 @@ services:
   # Your extra services here
   login:
     image: semtech/mu-login-service:3.0.0
+    environment:
+      USERS_GRAPH: "http://mu.semte.ch/graphs/public"
+      SESSIONS_GRAPH: "http://mu.semte.ch/graphs/public"
     links:
       - database:database
 
   registration:
     image: semtech/mu-registration-service:2.8.0
+    environment:
+      USERS_GRAPH: "http://mu.semte.ch/graphs/public"
+      SESSIONS_GRAPH: "http://mu.semte.ch/graphs/public"
     links:
       - database:database
 
