--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       LOG_SESSION: "true"
       DEFAULT_ACCESS_CONTROL_ALLOW_ORIGIN_HEADER: "*"
-      SESSION_COOKIE_SECURE: "off"
+      SESSION_COOKIE_SECURE: "on"
       SESSION_COOKIE_HTTP_ONLY: "off"
     labels:
       - "logging=true"
